[package]
name = "gitlab-push-and-mr"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

[dependencies]
hyper = { version = "0.13.0-a.4", features = ["unstable-stream"]}
hyper-tls = { version = "0.4.0-a.4" }
tokio = { version = "=0.2.0-alpha.6" }
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
futures-core-preview = "=0.3.0-alpha.19"
futures-io-preview = "=0.3.0-alpha.19"
futures-util-preview = "=0.3.0-alpha.19"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bytes = "0.4.12"
toml = "0.5"
git2 = "0.9.1"
clap = "2.33.0"


